@@ -1,3 +1,8 @@
+2009-09-28  Nick Clifton  <nickc@redhat.com>
+
+	* ld-mips-elf/mips-elf.exp: Only run attribute tests on Linux
+	targets.
+
 2009-09-23  Jie Zhang  <jie.zhang@analog.com>
 
 	* ld-srec/srec.exp: Add xfails for bfin-*-linux-uclibc.
